force-app/main/default/objects/PDRI__BaselineTarget__c/PDRI__BaselineTarget__c.object-meta.xml
<CustomObject>
    <label>Baseline Target</label>
    <nameField>
        <displayFormat>BT-{0}</displayFormat>
        <label>Baseline  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Baseline Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>