force-app/main/default/objects/PDRI__BaselineTarget__c/fields/PDRI__FieldName__c.field-meta.xml
<CustomField>
    <fullName>PDRI__FieldName__c</fullName>
    <formula>PDRI__TestedField__r.PDRI__FieldName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Name</label>
    <type>Text</type>
</CustomField>