force-app/main/default/objects/PDRI__BaselineTarget__c/fields/PDRI__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>PDRI__ObjectName__c</fullName>
    <formula>PDRI__TestedField__r.PDRI__ObjectName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Name</label>
    <type>Text</type>
</CustomField>