force-app/main/default/objects/PDRI__BaselineTarget__c/fields/PDRI__TestCase__c.field-meta.xml
<CustomField>
    <fullName>PDRI__TestCase__c</fullName>
    <label>Test Case</label>
    <referenceTo>PDRI__TestCase__c</referenceTo>
    <relationshipLabel>Baseline Targets</relationshipLabel>
    <relationshipName>BaselineTargets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>