force-app/main/default/objects/PDRI__BaselineTarget__c/fields/PDRI__TestedField__c.field-meta.xml
<CustomField>
    <fullName>PDRI__TestedField__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tested Field</label>
    <referenceTo>PDRI__TestedField__c</referenceTo>
    <relationshipLabel>Baseline Targets</relationshipLabel>
    <relationshipName>BaselineTargets</relationshipName>
    <type>Lookup</type>
</CustomField>