force-app/main/default/objects/PDRI__BaselineTarget__c/fields/PDRI__Value__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>